--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,4 +17,4 @@ jobs:
         uses: brandedoutcast/publish-nuget@v2.5.5
         with:
           PROJECT_FILE_PATH: '**/ThreeTacos.Tacomponents.csproj'
-          NUGET_KEY: somekey
+          NUGET_KEY: ${{ secrets.NUGET_KEY }}
