--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,5 +16,5 @@ jobs:
       - name: Publish NuGet
         uses: brandedoutcast/publish-nuget@v2.5.5
         with:
-          PROJECT_FILE_PATH: '*/ThreeTacos.Tacomponents/*.csproj'
+          PROJECT_FILE_PATH: tacomponents/ThreeTacos.Tacomponents/ThreeTacos.Tacomponents.csproj
           NUGET_KEY: ${{ secrets.NUGET_KEY }}
