--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,9 +12,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-
-      - name: Publish NuGet
-        uses: brandedoutcast/publish-nuget@v2.5.5
+      
+      - name: Setup dotnet
+        uses: actions/setup-dotnet@v2
         with:
-          PROJECT_FILE_PATH: ThreeTacos.Tacomponents/ThreeTacos.Tacomponents.csproj
-          NUGET_KEY: ${{ secrets.NUGET_KEY }}
+          dotnet-version: 6.0.x
+      - run: dotnet build ThreeTacos.Tacomponents/ThreeTacos.Tacomponents.csproj -c Release
+      - run: dotnet nuget push ThreeTacos.Tacomponents/bin/Release/ThreeTacos.Tacomponents.*.nupkg --api-key ${{ secrets.NUGET_KEY }} --source https://api.nuget.org/v3/index.json
