--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,13 +7,20 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  package:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3      
+      - uses: actions/checkout@v3
+      
       - name: Setup dotnet
         uses: actions/setup-dotnet@v2
         with:
           dotnet-version: 6.0.x
-      - run: dotnet build ThreeTacos.Tacomponents/ThreeTacos.Tacomponents.csproj -c Release
-      - run: dotnet nuget push ThreeTacos.Tacomponents/bin/Release/ThreeTacos.Tacomponents.*.nupkg --api-key ${{ secrets.NUGET_KEY }}
+          
+      - name: Build Project
+        run: dotnet build ThreeTacos.Tacomponents/ThreeTacos.Tacomponents.csproj -c Release
+        
+      - name: Push Package
+        run: dotnet nuget push ThreeTacos.Tacomponents/bin/Release/ThreeTacos.Tacomponents.*.nupkg -k $API_KEY -s https://api.nuget.org/v3/index.json
+        env:
+          API_KEY: ${{ secrets.NUGET_KEY }}
