--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,6 +48,6 @@ jobs:
         uses: crazy-max/ghaction-github-pages@v1.5.1
         with:
           target_branch: gh-pages
-          build_dir: bin/Release/net6.0/publish/wwwroot/
+          build_dir: ThreeTacos.Tacomponents.Demo/bin/Release/net6.0/publish/wwwroot/
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
