--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ permissions:
   id-token: write
 
 on:
-  push:
+  pull_request:
     branches: [ "main" ]
 
   workflow_dispatch:
@@ -30,31 +30,3 @@ jobs:
         run: dotnet nuget push ThreeTacos.Tacomponents/bin/Release/ThreeTacos.Tacomponents.*.nupkg -k $API_KEY -s https://api.nuget.org/v3/index.json
         env:
           API_KEY: ${{ secrets.NUGET_KEY }}
-  publish:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Setup dotnet
-        uses: actions/setup-dotnet@v2
-        with:
-          dotnet-version: 6.0.x
-          
-      - name: Publish app
-        run: dotnet publish ThreeTacos.Tacomponents.Demo/ThreeTacos.Tacomponents.Demo.csproj -c Release
-
-      - name: Rewrite base href
-        uses: SteveSandersonMS/ghaction-rewrite-base-href@v1
-        with:
-          html_path: ThreeTacos.Tacomponents.Demo/bin/Release/net6.0/publish/wwwroot/index.html
-          base_href: /tacomponents/
-
-      - name: GitHub Pages
-        if: success()
-        uses: crazy-max/ghaction-github-pages@v1.5.1
-        with:
-          target_branch: gh-pages
-          build_dir: ThreeTacos.Tacomponents.Demo/bin/Release/net6.0/publish/wwwroot/
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
